# nlp2-challenges

./: .gitignore  README.md  tp1_TinyGPT_es.ipynb
TP1/: TinyGPT_es.ipynb  tp1_TinyGPT.ipynb
TP2/my-chatbot/: .env-local  README.md  pyproject.toml
TP2/my-chatbot/src/my_chatbot/: app_rag_cv.py
TP3/my-chatbot-agents/: README.md  pyproject.toml
TP3/my-chatbot-agents/src/my_chatbot_agents/: app_agents.py
