[tool.poetry]
name = "my-chatbot-agents"
version = "0.1.0"
description = ""
authors = ["Luciano Adassus"]
packages = [{ include = "my_chatbot_agents", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11.13"
streamlit = ">=1.33"
langchain = ">=0.2"
langchain-community = ">=0.2"
langchain-text-splitters = ">=0.2"
langchain-groq = ">=0.1.5"
torch = "==2.2.2"
sentence-transformers = "==2.2.2"
transformers = "==4.40.2"
pypdf = ">=4"
numpy = "<2.0"
groq = ">=0.12"
langchain-pinecone = ">=0.1"
fastembed = ">=0.3"
python-dotenv = ">=1.1.1,<2.0.0"
black = ">=25.1.0,<26.0.0"
ruff = ">=0.12.8,<0.13.0"
pylint = ">=3.3.8,<4.0.0"
mypy = ">=1.17.1,<2.0.0"
onnxruntime = "^1.22.1"
pymupdf = "^1.26.3"
docx2txt = "^0.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
